rebrand to duct tape

--- a/.vuepress/theme/styles/config.styl
+++ b/.vuepress/theme/styles/config.styl
@@ -1,11 +1,12 @@
 // colors
 $accentColor = #FFFFFF
 $textColor = #fff
+$textColorSecondary = #000
 $borderColor = #eaecef
 $codeBgColor = #282c34
 $arrowBgColor = #ccc
 
-$primaryAccentColor = #01FFE0
+$primaryAccentColor = #fff
 
 // layout
 $navbarHeight = 4.2rem
@@ -24,5 +25,5 @@ $MQMobileNarrow = 419px
 $lineNumbersWrapperWidth = 3.5rem
 
 // text
-$primaryFontFamily = 'Space Grotesk', sans-serif
-$secondaryFontFamily = 'Oxygen Mono', monospace
+$primaryFontFamily = 'Helvetica', sans-serif
+$secondaryFontFamily = 'Helvetica', sans-serif
